modified the routes
